--- a/Intermediate_Javascript/Array_Methods/style.css
+++ b/Intermediate_Javascript/Array_Methods/style.css
@@ -21,7 +21,7 @@ h1 {
     font-size: 4em;
     color: #36454F;
     margin-bottom: 80px;
-    margin-top: -400px;
+    margin-top: 20px;
     text-align: center;
     font-family: 'Georgia', serif;
     font-weight: bold;
@@ -30,9 +30,15 @@ h1 {
 
 /* Container to hold content */
 .container {
-    text-align: center;
+    text-align: left;
     width: 100%;
-    max-width: 600px;
+    max-width: 60%;
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border: 2px solid #36454F;
+    border-radius: 10px;
 }
 
 /* Button styling */
@@ -81,13 +87,7 @@ input[type="number"]:focus {
     gap: 20px;
 }
 
-/* Container styling */
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
+
 
 /* Number Container Styling */
 .number-container {
