--- a/Intermediate_Javascript/JS_Web/JS_Events/style.css
+++ b/Intermediate_Javascript/JS_Web/JS_Events/style.css
@@ -42,6 +42,13 @@ li{
     font-size: 1.2em;
     margin-top: 20px;
 }
+.event{
+    color: black;
+}
+.eventDone{
+    color: red;
+    text-decoration: line-through;
+}
 .explainer{
     font-size: 1em;
     margin: 20px;
